@startuml
entity directories { *id; dir_path; parent_id }
entity images { *id; file_name; directory_id; thumbnail; is_deleted }
entity operation_logs { *id; image_id; operation_type }
entity tag_categories { *id; name }
entity tags { *id; category_id; name }
entity image_tags { *image_id; *tag_id; confidence }
entity ai_analysis_results { *image_id; description; raw_response }
directories ||--o{ images
images ||--o{ operation_logs
tag_categories ||--o{ tags
images ||--o{ image_tags
tags ||--o{ image_tags
images ||--|| ai_analysis_results
@enduml
